added jenkins CD

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Hello CloudCover</title>
+  <title>Hello CloudCover!!!!</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
